--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-native": "~0.69.1",
     "@types/styled-components": "^5.1.26",
     "@types/styled-components-react-native": "^5.1.3",
+    "axios": "^0.27.2",
     "expo": "~46.0.13",
     "expo-linear-gradient": "~11.4.0",
     "expo-splash-screen": "~0.16.2",
